--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
-    
+   <div>
+    <h3>my first website</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis provident dolor corrupti harum. Nisi veniam, iusto illo doloremque aliquam ipsum adipisci eveniet perferendis hic. Eligendi aspernatur amet commodi. Earum, eligendi!</p>
+   </div>
 </body>
 </html>
